# filmgraph

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: exporters.md  importers.md  index.md  schema.md  vocabularies.md
examples/: bloody_tennis_local_run.filmgraph.json  bloody_tennis_local_run.json  eval_report.md
src/filmgraph/: __init__.py  schema.py  vocabulary.py
src/filmgraph/exporters/: __init__.py  ad_script.py  ccsl.py  csv_export.py  dialogbuch.py  ground_truth.py  markdown.py  otio_export.py  srt.py  timeline.py
src/filmgraph/importers/: __init__.py  ad_script.py  ccsl.py  dialogbuch.py  ground_truth.py  otio_import.py  srt.py  timeline.py
tests/: test_exporters.py  test_importers.py  test_schema.py
